convert from jd to asr

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP.POSTGRES.DSN=postgres://postgres:password@localhost:5432/postgres
+.env.exampleAPP.POSTGRES.DSN=postgres://postgres:password@localhost:5432/postgres
 APP.POSTGRES.MAX_CONNS=5
 APP.WEB.ADDR=0.0.0.0:8080
 
