--- a/crates/asr_api/Cargo.toml
+++ b/crates/asr_api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jd_api"
+name = "asr_api"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,6 +10,6 @@ serde_json = "1.0.120"
 sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
 
 # Members
-jd_core = {path = "../jd_core"}
-jd_domain = {path = "../jd_domain"}
-jd_infra = {path = "../jd_infra"}
+asr_core = {path = "../asr_core"}
+asr_domain = {path = "../asr_domain"}
+asr_infra = {path = "../asr_infra"}
