--- a/crates/asr_infra/Cargo.toml
+++ b/crates/asr_infra/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jd_infra"
+name = "asr_infra"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,8 +10,8 @@ tracing = "0.1.40"
 uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
 
 # Members
-jd_core = { path = "../jd_core"}
-jd_domain = { path = "../jd_domain"}
+asr_core = { path = "../asr_core" }
+asr_domain = { path = "../asr_domain" }
 sea-query = "0.30.7"
 modql = { version = "0.3.10", features = ["with-sea-query"] }
 sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres"] }
