--- a/crates/asr_app/Cargo.toml
+++ b/crates/asr_app/Cargo.toml
@@ -13,6 +13,8 @@ tracing-subscriber = "0.3"
 sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
 tokio = { version = "1.38.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
+tiberius = { version = "0.5", features = ["chrono", "tokio", "tds73"] }
+
 
 
 # Members
