--- a/crates/asr_core/Cargo.toml
+++ b/crates/asr_core/Cargo.toml
@@ -14,3 +14,5 @@ sqlx = { version = "0.7.4", features = ["postgres"] }
 thiserror = "1.0.61"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+tiberius = { version = "0.5", features = ["chrono", "tokio", "tds73"] }
+chrono = "0.4"
