--- a/crates/asr_infra/Cargo.toml
+++ b/crates/asr_infra/Cargo.toml
@@ -8,6 +8,11 @@ axum = "0.7.5"
 sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
 tracing = "0.1.40"
 uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
+tiberius = { version = "0.5", features = ["chrono", "tokio", "tds73"] }
+chrono = "0.4"
+tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.6", features = ["compat"] }
+futures-util = "0.3"
 
 # Members
 asr_core = { path = "../asr_core" }
